@@ -2,6 +2,8 @@ ags (0.7.132)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented seperator within AgsLine and AgsEffectLine
+	* TODO:JK: implemented seemless mode
+	* improved theme, dial style to have dark background
 
 ags (0.7.131)
 
